# logifix-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.h  dockspace.cpp  dockspace.h  dockspace.hpp  editor.cpp  editor.h  editor.hpp  filepicker.cpp  filepicker.h  imgui.ini  main.cpp  program.cpp  state.h
examples/: Shadowing.java  Test.java
examples/1125_RemoveRedundantBooleanLiterals/: BooleanLiteralCheck.java  RedundantBooleanInEqualsExpression.java
examples/1155_UseIsEmpty/: CollectionIsEmptyCheck.java  CompareSizeToZero.java
examples/1192_StringLiteralsShouldNotBeDuplicated/: StringLiteralDuplicatedCheck.java
examples/1481_RemoveUnusedLocalVariables/: UnusedLocalVariable.java  UnusedLocalVariableCheck.java
examples/1656_FixSelfAssignment/: SelfAssignment.java
examples/1854_DeadStore/: DeadStoreCheck.java
examples/2111_BigDecimalDoubleConstructor/: BigDecimalDoubleConstructor.java
examples/2293_UseTheDiamondOperator/: DiamondOperatorCheck_java_7.java  DiamondOperatorCheck_java_8.java  DiamondOperatorCheck_no_version.java
examples/4973_CompareBoxedTypesWithEquals/: CompareStringsBoxedTypesWithEquals.java
